--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.demo.sl.calendardemo.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.demo.sl.calendardemo.MyCalendar xmlns:MyCalendarNS="http://schemas.android.com/apk/res/com.demo.sl.calendardemo"
+        android:id="@+id/my_calendar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        MyCalendarNS:dateFormat="yyyy-MM" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
